--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,61 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  font-size: 62.5%;
+  font-family: "Manrope", sans-serif;
+}
+
+body {
+  background-color: antiquewhite;
+}
+
+ul {
+  list-style: none;
+}
+
+h2 {
+  font-size: 2rem;
+  margin-bottom: 2rem;
+}
+
+@media (max-width: 1400px) {
+  html {
+    font-size: 60%;
+  }
+}
+
+@media (max-width: 1120px) {
+  html {
+    font-size: 55%;
+  }
+}
+
+@media (max-width: 860px) {
+  html {
+    font-size: 50%;
+  }
+}
+
+@media (max-width: 670px) {
+  html {
+    font-size: 55%;
+  }
+}
+
+@media (max-width: 580px) {
+  html {
+    font-size: 50%;
+  }
+}
+
+@media (max-width: 456px) {
+  html {
+    font-size: 40%;
+  }
 }
